# rust-overlay-esp

./: .gitignore  Cargo.toml  README.md  esp.sh  flake.nix  logs.txt  manifest.nix  manifests.nix  overlay.nix  result  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  update-manifests.yml
nix/: manifests.nix  overlay.nix
src/: asset.rs  github.rs  main.rs  metadata.rs  nix.rs
tools/: Cargo.toml  rustfmt.toml
tools/src/: asset.rs  github.rs  lib.rs  main.rs  nix.rs
