[package]
name = "manifester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
color-eyre = "0.6"
data-encoding = "2.4"
futures = "0.3"
futures-util = "0.3"
indoc = "2.0"
lazy-regex = "2.5"
par-stream = { version = "0.10", features = ["runtime-tokio"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
target-lexicon = "0.12"
textwrap = "0.16"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
maplit = "1.0"
