[package]
name = "manifester"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
color-eyre = "0.6"
data-encoding = "2"
futures = "0.3"
futures-util = "0.3"
indoc = "2"
lazy-regex = "2"
nutype = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
target-lexicon = "0.12"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
maplit = "1"
